--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -870,5 +870,5 @@
   "com_ui_zoom": "Zoom",
   "com_user_message": "You",
   "com_warning_resubmit_unsupported": "Resubmitting the AI message is not supported for this endpoint.",
-  "com_auth_mentor_sign_up": "Mentor Sign Up"
+  "com_auth_mentor_sign_up": "Let's Get Started"
 }
