Added a required sign up code

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -124,6 +124,9 @@
   "com_auth_reset_password_success": "Password Reset Success",
   "com_auth_sign_in": "Sign in",
   "com_auth_sign_up": "Sign up",
+  "com_auth_signup_code": "Signup Code",
+  "com_auth_signup_code_required": "Signup code is required",
+  "com_auth_signup_code_invalid": "Invalid signup code",
   "com_auth_submit_registration": "Submit registration",
   "com_auth_to_reset_your_password": "to reset your password.",
   "com_auth_to_try_again": "to try again.",
